# anzen2

./: .gitignore  Cargo.toml  Dockerfile  README-camera-matrix.md  README.md
capture/: Dockerfile  README.md  pom.xml  run.sh  settings.xml
capture/src/main/java/net/anzen2/: Main.java
motion/: .gitignore  Cargo.toml  Dockerfile  README.md  run.sh  run_local.sh
motion/src/: main.rs
motion/src/algorithms/: simple.rs
motion/src/server/: mod.rs
motion/src/util/: mod.rs
src/: client_message.rs  config.rs  images.rs  lib.rs  message_types.rs  stream_server.rs  stream_session.rs  time.rs
src/images/: app.rs  jpeg.rs
static/: device.html  monitor.html  mtx-monitor.html
static/js/: device.js  monitor.js  mtx-monitor.js
