[package]
name = "anzen2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-http = "3.8.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
log = "0.4"
env_logger = "0.9"
bytes = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
num_cpus = "1.13.1"
ipnetwork = "0.20.0"
derive_more = "0.99.18"
